<resources>
    <string name="app_name">Liar\'s dice</string>
    <string name="HomeHeader">Join or create a room</string>
    <string name="HomeHelperText">Enter room number</string>
    <string name="HomeTextFieldHint">Room number</string>
    <string name="ProfileHeader">Profile</string>
    <string name="JoinRoom">Join room</string>
    <string name="CreateRoom">Create room</string>
    <string name="SeeProfile">See profile</string>
    <string name="SignOutButton">Sign out</string>
    <string name="ProfileDisplayName">Username:</string>
    <string name="ProfileWins">Wins:</string>
    <string name="ProfileLoses">Loses:</string>
    <string name="ProfileTotalGames">Total games:</string>
    <string name="ProfileHelperText">Username</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="LoseRound">I lost the round</string>
    <string name="RollDice">Roll dice here</string>
    <string name="ShakeHelp">Shake the phone to role your dice</string>
    <string name="PlayersText">Players:</string>
    <string name="DiceLeft">Dice remaining:</string>
    <string name="RoomNumber">Room number:</string>
    <string name="LeaveRoom">Leave room</string>
    <string name="StartGame">Start Game</string>
    <string name="LoginHeaderText">Welcome to Liar\'s Dice</string>
    <string name="LoginText">Please login in order to play a game of Liar\'s Dice</string>
    <string name="btnGenerateName">Generate Random Username</string>
    <string name="WinsValue">WinsValue</string>
    <string name="LosesValue">LosesValue</string>
    <string name="TotalGamesValue">TotalGamesValue</string>
</resources>